# checker

./: .gitignore  Cargo.toml  Description.txt  README.md  config.json
prog/: Makefile  main.cpp
prog2/: prog.out
src/: ast.rs  compare.py  gen_hashes.py  github.rs  github_client.rs  index.py  lab.rs  main.rs  mark_includes.py  program.rs  runner.rs  student.rs  test.rs  variant.rs
test_progs/prog2/: Makefile  main.c
