[package]
name = "checker"
version = "0.1.0"
authors = ["atmopunk"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0"
async-std = "1.2.0"
futures = "0.3.1"
